--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "daisyui": "^5.0.4",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.14"
+  "name": "proyectofinalbackend1",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "type": "module",
   "dependencies": {
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
-    "mongoose": "^8.12.1"
+    "mongoose": "^8.12.1",
+    "mongoose-paginate-v2": "^1.9.0"
   }
 }
