--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "mongoose": "^8.12.1",
-    "mongoose-paginate-v2": "^1.9.0"
+    "mongoose-paginate-v2": "^1.9.0",
+    "proyectofinalbackend1": "file:"
   }
 }
